--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ body{
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "Sunday";
-    weekday[1] = "Monday";
-    weekday[2] = "Tuesday";
-    weekday[3] = "Wednesday";
-    weekday[4] = "Thursday";
-    weekday[5] = "Friday";
-    weekday[6] = "Saturday";
+    weekday[0] = "Lundi";
+    weekday[1] = "Mardi";
+    weekday[2] = "Mercredi";
+    weekday[3] = "Jeudi";
+    weekday[4] = "Vendredi";
+    weekday[5] = "Samedi";
+    weekday[6] = "Dimanche";
 
     
     var today = new Date();
@@ -45,11 +45,11 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning Carla ';
+        greet = 'Bonjour Carla ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon Carla ';
+        greet = 'Bonne Après-midi Carla ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening Carla ';
+        greet = 'Bonsoir Carla ';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> It's ${date}</div>`;
